2004-03-05  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-ia64.c (md_assemble): Properly handle NULL
	align_frag.
	(ia64_handle_align): Don't abort if failed to add a stop bit.

2004-03-04  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.in: Regenerated.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* doc/Makefile.in: Likewise.

2004-03-03  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-ia64.c (dot_align): New.
	(ia64_do_align): Make it static.
	(md_pseudo_table): Use "dot_align" for "align".
	(ia64_md_do_align): Don't set align_frag here.
	(ia64_handle_align): Add a stop bit to the previous bundle if
	needed.

	* config/tc-ia64.h (ia64_do_align): Removed.

2003-03-03  Andrew Stubbs  <andrew.stubbs@superh.com>

	* config/tc-sh.c (md_parse_option): Add -isa=sh4-nofpu and
	-isa=sh4-nommu-nofpu options. Adjust help messages accordingly.
	(sh_elf_final_processing): Output BFD type sh4_nofpu if that is
	the most general type or the user specifically requested it.
	(md_assemble): Add a new error message for when an instruction
	is understood, but is not allowed due to an -isa option.

2004-03-02  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-ia64.c (align_frag): New.
	(md_assemble): Set the tc_frag_data field in align_frag for
	IA64_OPCODE_FIRST instructions.
	(ia64_md_do_align): Set align_frag.
	(ia64_handle_align): Add a stop bit if needed.

	* config/tc-ia64.h (TC_FRAG_TYPE): New.
	(TC_FRAG_INIT): New.

2004-03-01  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-frv.c (fr400_audio): New variable.
	(md_parse_option, md_show_usage): Add -mcpu=fr405 and -mcpu=fr450.
	(md_parse_option): Set fr400_audio for -mcpu=fr400 and -mcpu=fr405.
	(target_implements_insn_p): New function.
	(md_assemble): Report an error if the processor doesn't implement
	the instruction.

2004-02-27  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* config/tc-m32r.c (md_longopts): Added -no-bitinst option.
	(md_parse_option): Ditto.
	(OPTION_NO_SPECIAL_M32R): Added.