@@ -1,3 +1,8 @@
+2004-03-07  Richard Henderson  <rth@redhat.com>
+
+	* dw2gencfi.c (output_cie): Align length to 4 byte boundary.
+	(cfi_finish): Likewise for fde.
+
 2004-03-05  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* config/tc-ia64.c (md_assemble): Properly handle NULL
